# flicense-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cSpell.json  codebook.toml  taskfile.yml
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml  test.yml
src/: main.rs
