[package]
name = "flicense"
description = "CLI for printing license information of rust cargo projects to the terminal."
authors = ["Adam McKellar <dev@mckellar.eu>"]
version = "0.1.6"
edition = "2021"
repository = "https://github.com/WyvernIXTL/flicense-rs"
license = "BSL-1.0"
keywords = ["license", "fetch", "about", "find"]

[profile.optimized-release]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.debug-release]
inherits = "release"
opt-level = 3
debug = true

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
colored = "3.0.0"
license-fetcher = { version = "0.7.0", features = ["build"] }
mimalloc = { version = "0.1.46", features = ["secure"], optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yml = "0.0.12"
tikv-jemallocator = { version = "0.6.0", optional = true }
toml = "0.8.19"

[build-dependencies]
license-fetcher = { version = "0.7.0", features = ["build"] }

[features]
# Other memory allocators for testing.
# On Windows and Linux GNU they perform worse than the standard allocators.
# I was not able to test Linux MUSL or Apple performance.
mimalloc = ["dep:mimalloc"]
tikv-jemallocator = ["dep:tikv-jemallocator"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-fmt = "zip"
